--- a/github-homepage/package.json
+++ b/github-homepage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-homepage",
-  "homepage": "https://phinch.github.io/home",
+  "homepage": "https://phinch.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
